--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.2.0",
     "core-js": "^3.6.5",
+    "leaflet": "^1.9.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
