--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@vueuse/core": "^9.6.0",
     "axios": "^1.2.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.9.3",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@capacitor/cli": "4.0.1",
     "@types/jest": "^27.0.2",
+    "@types/leaflet": "^1.9.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
