--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.2.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.9.3",
+    "pinia": "^2.0.27",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
