--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/uuid": "^9.0.0",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.2.0",
     "axios-retry": "^3.3.1",
