--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-app",
-  "version": "0.0.1",
+  "name": "cities-app",
+  "version": "0.0.2",
   "private": true,
   "description": "An Ionic project",
   "scripts": {
