--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/uuid": "^9.0.0",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.2.0",
     "axios-retry": "^3.3.1",
     "core-js": "^3.6.5",
     "leaflet": "^1.9.3",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.27",
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
