--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "dependencies": {
     "@capacitor/android": "4.0.1",
-    "@capacitor/app": "4.0.1",
+    "@capacitor/app": "^4.1.1",
     "@capacitor/core": "4.0.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@capacitor/haptics": "^4.1.0",
+    "@capacitor/keyboard": "^4.1.0",
+    "@capacitor/preferences": "^4.0.2",
+    "@capacitor/status-bar": "^4.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
