--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.3",
   "private": true,
   "description": "An Ionic project",
+  "vue": {
+    "pwa": {
+      "themeColor":"#4287f5"
+    }
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
