--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cities-app",
-  "version": "0.0.3",
+  "version": "0.0.7",
   "private": true,
   "description": "An Ionic project",
   "vue": {
     "pwa": {
-      "themeColor":"#4287f5"
+      "themeColor": "#4287f5"
     }
   },
   "scripts": {
@@ -18,7 +18,8 @@
     "start": "vue-cli-service serve",
     "native-build": "npx rimraf dist && ionic build && npx cap sync && npx cap copy",
     "native-open-android": "npx cap open android",
-    "native-dev": "yarn native-build && yarn native-open-android"
+    "native-dev": "yarn native-build && yarn native-open-android",
+    "nodemon-native-dev": "nodemon native-dev"
   },
   "dependencies": {
     "@capacitor/android": "4.0.1",
@@ -72,6 +73,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "nodemon": "^2.0.20",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   }
