--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/android": "4.0.1",
     "@capacitor/app": "^4.1.1",
     "@capacitor/core": "4.0.1",
+    "@capacitor/geolocation": "^4.1.0",
     "@capacitor/haptics": "^4.1.0",
     "@capacitor/keyboard": "^4.1.0",
     "@capacitor/local-notifications": "^4.1.4",
