--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/core": "4.0.1",
     "@capacitor/haptics": "^4.1.0",
     "@capacitor/keyboard": "^4.1.0",
+    "@capacitor/network": "^4.1.0",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "^4.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
